Fixed layout issues with login nav

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -38,7 +38,7 @@
 	& .nav-wrap {
 		background-color: var(--global-theme-secondary);
 		box-shadow: 1px 0 3px rgba(0, 0, 0, 0.08);
-		height: calc(100vh - 86px);
+		height: calc(100vh - 74px);
 		left: 0;
 		max-width: 82.6667vw;
 		overflow: auto;
