--- a/themes/experience-engine/assets/styles/components/navigation/user-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/user-nav.css
@@ -1,14 +1,24 @@
 .user-nav {
     background-color: var(--global-theme-secondary);
     border-top: 1px solid #E8E8E8;
-    display: flex;
     justify-content: space-between;
-    margin-left: -1.1rem;
-    margin-right: -1.1rem;
-    max-width: 190px;
-    padding: 1.1rem;
-    bottom: 74px;
+    padding: 1.1rem 0;
     z-index: 10;
+
+    & > div {
+        display: flex;
+        flex-direction: column;
+    }
+
+    @media(--min-large-viewport) {
+        bottom: 74px;
+        margin-left: -1.1rem;
+        margin-right: -1.1rem;
+        max-width: 190px;
+        padding: 1.1rem;
+        position: fixed;
+        width: 100%
+    }
 
     & .user-nav-image {
         align-self: center;
@@ -45,7 +55,7 @@
         &.-with-icon {
             display: inline-flex;
             font-size: 1rem;
-            margin-bottom: .5rem;
+            margin-bottom: 0.8rem;
 
             & svg {
                 display: inline-block;
